# Spmm_TaRe

./: .gitignore  CMakeLists.txt  Makefile  main.c  run.sh
inc/: CommHandler.h  DenseMat.h  Reader.h  SpMM.h  SparseMat.h
matrix/: DenseMat.c  SpMM.c  SparseMat.c
src/: CommHandler.c  Reader.c
